fixtures/errors/json_stringify_cycle_object.js
const value = {};
value.self = value;

JSON.stringify(value);
